plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-android-extensions'
    id 'kotlin-kapt'
}

android {
    namespace 'com.leumas.superweather'
    compileSdk 34

    defaultConfig {
        applicationId "com.leumas.superweather"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"
        // how can get the value from Keys file
        def envProps = new Properties()
        file("../env.properties").withInputStream { stream ->
            envProps.load(stream)
        }
        def weatherApiKey = System.getenv("WEATHER_API_KEY") ?: envProps.getProperty("WEATHER_API_KEY")
        buildConfigField 'String', 'WEATHER_API_KEY', "\"$weatherApiKey\""


        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }
    }

    testOptions {
        unitTests.all {
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.3.2'
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    // For JUnit
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'

// For Mockito
    testImplementation 'org.mockito:mockito-core:3.11.2'
    testImplementation 'org.mockito:mockito-inline:3.11.2'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'

// For Coroutines
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'

// For Turbine
    testImplementation 'app.cash.turbine:turbine:0.6.1'

    def lifecycle_version = "2.5.1"
    def dagger_version = "2.44.2"
    def room_version = "2.2.0"
    def nav_version = "2.5.3"
    def fragment_version = "1.5.7"
    def permissionsDispatcherVersion = '4.8.0'

    implementation 'androidx.compose.material3:material3:1.2.1'

    implementation 'com.google.android.gms:play-services-location:21.0.1'
    implementation 'com.jakewharton.timber:timber:5.0.1'
    implementation "androidx.core:core-splashscreen:1.0.0"
    implementation "com.github.permissions-dispatcher:permissionsdispatcher:$permissionsDispatcherVersion"
    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:$permissionsDispatcherVersion"
    implementation "androidx.fragment:fragment-ktx:$fragment_version"

    implementation 'androidx.core:core-ktx:1.8.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
    implementation 'androidx.activity:activity-compose:1.5.1'
    implementation platform('androidx.compose:compose-bom:2022.10.00')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"

    implementation "com.google.dagger:dagger:$dagger_version"
    kapt "com.google.dagger:dagger-compiler:$dagger_version"
    implementation "com.airbnb.android:lottie-compose:5.2.0"
    implementation("androidx.room:room-runtime:$room_version")
    kapt ("androidx.room:room-compiler:$room_version")

    implementation 'com.facebook.shimmer:shimmer:0.5.0'

    // optional - Kotlin Extensions and Coroutines support for Room
    implementation("androidx.room:room-ktx:$room_version")

    // ViewModel
    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
    // LiveData
    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
    // Lifecycles only (without ViewModel or LiveData)
    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
    // Saved state module for ViewModel
    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
    // Annotation processor
    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")

    implementation("androidx.navigation:navigation-compose:$nav_version")
}